fix(overview): remove scroll-bar on overview page - add overflow: hidden to main

--- a/css/overview.css
+++ b/css/overview.css
@@ -15,6 +15,7 @@ main {
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .dashboard-container {
